changed some stuff

--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
 <h1 id="unblock-survivio">unblock-survivio</h1>
-<p>This is a GitHub repo that uses an iframe to bypass a Chrome extension that blocks games and stuff. My fellow students are particulary fond of Surviv.io, but the extension blocked the websites for it. Some websites worked, but fullscreen didn't work. <br> The solution? Make something that can bypass it. <br></p>
-<p>So I did.</p>
-<p>Share this link to help others have fun! <a href="http://bit.ly/surviv-io">bit.ly/surviv-io</a></p>
-<p>Want to add a website to this list? Make a GitHub Issue with the URL and website name! Or fork it.</p>
-<h2 id="this-will-not-work-with-devices-that-use-the-securly-vpn-such-as-ipads-and-iphones.">This will not work with devices that use the Securly VPN, such as iPads and iPhones.</h2>
-<p>This will, however, work with the Chrome extension. It’s made for the extension and tested on the extension, so if your device doesn’t have it, it may not work.</p>
-<h2 id="things-that-are-not-games">Things that are Not Games</h2>
-<h3 id="click-here-to-access-bing"><a href="https://randomblock1.github.io/unblock-survivio/bing.html" title="Note: you can’t click links">Click Here to Access Bing</a></h3>
+<p>This is a This is a little project for my fellow classmates that use their chromebook after school. THIS IS NOT TO BE USED IN CLASS! FOLLOW THE RULES! ONLY FOR AFTER SCHOOL! <br></p>
 <h2 id="games">Games</h2>
-<h3 id="click-here-to-access-surviv.io"><a href="https://eternityworktogether.github.io/survivio.html" title="Surviv.io Unblocked!">Click Here to Access Surviv.io</a></h3>
-<h3 id="click-here-to-access-agar.io"><a href="https://eternityworktogether.github.io/agar.html" title="Agar.io Unblocked!">Click Here to Access Agar.io</a></h3>
-<h3 id="click-here-to-access-coolmathgames"><a href="https://eternityworktogether.github.io/coolmath.html" title="coolmathgames Unblocked!">Click Here to Access coolmathgames</a></h3>
-<h3 id="click-here-to-access-shell-shockers"><a href="eternityworktogether.github.io/shellshockers.html" title="Shell Shockers Unblocked!">Click Here to Access Shell Shockers</a></h3>
-<h3 id="click-here-to-access-bonk.io"><a href="https://eternityworktogether.github.io/bonk.html" title="Bonk.io Unblocked!">Click Here to Access Bonk.io</a></h3>
-<h3 id="click-here-to-access-ourworld"><a href="https://eternityworktogether.github.io/ourworld.html" title="OurWorld Unblocked!">Click Here to Access OurWorld</a></h3>
-<h3 id="click-here-to-access-diep.io"><a href="https://eternityworktogether.github.io/diep.html" title="Diep.io Unblocked!">Click Here to Access Diep.io</a></h3>
+<h3 id="surviv.io"><a href="https://eternityworktogether.github.io/survivio.html" title="surviv.io">surviv.io</a></h3>
+<h3 id="agar.io"><a href="https://eternityworktogether.github.io/agar.html" title="agar.io">agar.io</a></h3>
+<h3 id="coolmathgames"><a href="https://eternityworktogether.github.io/coolmath.html" title="coolmathgames">coolmathgames</a></h3>
+<h3 id="shell-shockers"><a href="eternityworktogether.github.io/shellshockers.html" title="shell shockers">shell shockers</a></h3>
+<h3 id="bonk.io"><a href="https://eternityworktogether.github.io/bonk.html" title="bonk.io">bonk.io</a></h3>
+<h3 id="ourworld"><a href="https://eternityworktogether.github.io/ourworld.html" title="ourworld">ourworld</a></h3>
+<h3 id="diep.io"><a href="https://eternityworktogether.github.io/diep.html" title="diep.io">diep.io</a></h3>
 <p><br><br><br><br><br><br><br><br></p>
-<p>Powered by <a href="https://github.com/Randomblock1/unblock-survivio">Randomblock1’s GitHub repo</a> and made with ❤️ If you like this repo, star it on GitHub and share it with your friends!</p>
-<p>Note: if you fork this, the paragraph that says “powered by randomblock1’s github repo” must be preserved and not removed or edited on any page. Thanks.</p>
+<p>❤️</p>
