fixed + added secret

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1 id="unblock-survivio">unblock-survivio</h1>
+<h1 id="eternity-work-together">Eternity Work Together</h1>
 <p>This is a This is a little project for my fellow classmates that use their chromebook after school. THIS IS NOT TO BE USED IN CLASS! FOLLOW THE RULES! ONLY FOR AFTER SCHOOL! <br></p>
 <h2 id="games">Games</h2>
 <h3 id="surviv.io"><a href="https://eternityworktogether.github.io/survivio.html" title="surviv.io">surviv.io</a></h3>
