Added papas games

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <h3 id="bonk.io"><a href="https://eternityworktogether.github.io/bonk.html" title="bonk.io">bonk.io</a></h3>
 <h3 id="ourworld"><a href="https://eternityworktogether.github.io/ourworld.html" title="ourworld">ourworld</a></h3>
 <h3 id="diep.io"><a href="https://eternityworktogether.github.io/diep.html" title="diep.io">diep.io</a></h3>
+<h3 id="papas"><a href="https://eternityworktogether.github.io/papas.html" title="diep.io">papas</a></h3>
 <p><br><br><br><br><br><br><br><br></p>
 <p>❤️</p>
