--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
 <h3 id="bonk.io"><a href="https://eternityworktogether.github.io/bonk.html" title="bonk.io">bonk.io</a></h3>
 <h3 id="ourworld"><a href="https://eternityworktogether.github.io/ourworld.html" title="ourworld">ourworld</a></h3>
 <h3 id="diep.io"><a href="https://eternityworktogether.github.io/diep.html" title="diep.io">diep.io</a></h3>
-<h3 id="papas"><a href="https://eternityworktogether.github.io/papas.html" title="diep.io">papas</a></h3>
+<h3 id="papas"><a href="https://eternityworktogether.github.io/papas.html" title="papas">papas</a></h3>
+<h3 id="slither.io"><a href="https://eternityworktogether.github.io/slither.html" title="slither.io">slither.io</a></h3>
+
+<p><br><br></p>
+<p>Music</p>
+<html>  
+<head><script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script></head>
+<body>       
+<audio id="player" autoplay controls><source src="0.mp3" type="audio/mp3"></audio>
+</body>
+<script>
+    var x = 0;
+    var music = document.getElementById("player");
+    $("#player").bind("ended", function(){
+    x=x+1;
+    music.src = x%4 + ".mp3";
+    music.load();
+    music.play();       
+    });
+    </script>
+</html>
+
 <p><br><br><br><br><br><br><br><br></p>
 <p>❤️</p>
